k8s/demo2/deployment_pong_srv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-pong
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-istio-pong
      version: v.0.0.2
  template:
    metadata:
      labels:
        app: demo-istio-pong
        version: v.0.0.2
    spec:
      containers:
      - name: demo-istio-pong
        image: docker.io/jsenon/demo-istio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9010
