k8s/demo2/service_pong.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-istio-pong
  namespace: default
  labels:
    app: demo-istio-pong
spec:
  selector:
    app: demo-istio-pong
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9010
