k8s/demo2/virtualservice-play.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio-play
spec:
  hosts:
    - "*"
  gateways:
  - demo-istio-gateway # <---- bind to gateway
  http:
  - match:
    - uri:
        prefix: "/play"
    route:
    - destination:
        host: demo-istio
      weight: 100
